--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,4 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/*.pdf"
+          artifactContentType: "application/pdf"
